cabal-version:       >=1.10
name:                metadata-lib
version:             0.1.0.0
license-file:        ../LICENSE
author:              Samuel Evans-Powell
maintainer:          mail@sevanspowell.net
build-type:          Simple
extra-source-files:  ../CHANGELOG.md

library
  hs-source-dirs:      src

  exposed-modules:     Cardano.Metadata.Server
                       Cardano.Metadata.Server.Types
                       Cardano.Metadata.Server.API
                       Cardano.Metadata.Store.Types
                       Cardano.Metadata.Store.Simple
                       Cardano.Metadata.Webhook.Types
                       Cardano.Metadata.Webhook.API
                       Cardano.Metadata.Webhook.Server
                       Test.Cardano.Metadata.Store
                       Test.Cardano.Metadata.Generators

  build-depends:       HUnit
                     , QuickCheck
                     , aeson
                     , aeson-pretty
                     , base
                     , base64-bytestring
                     , bytestring
                     , casing
                     , containers
                     , deepseq
                     , directory
                     , github-webhooks
                     , hedgehog
                     , hspec
                     , http-api-data
                     , http-client
                     , http-types
                     , lens
                     , lens-aeson
                     , memory
                     , monad-logger
                     , mtl
                     , network-uri
                     , raw-strings-qq
                     , safe-exceptions
                     , scientific
                     , servant
                     , servant-client
                     , servant-github-webhook
                     , servant-server
                     , smallcheck
                     , tasty
                     , tasty-hedgehog
                     , tasty-hspec
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , unordered-containers
                     , wai
                     , warp
                     , wreq

test-suite unit-tests
  hs-source-dirs:       test
  main-is:              Main.hs
  type:                 exitcode-stdio-1.0

  build-depends:  base >=4.12 && <5
                , HUnit
                , QuickCheck
                , aeson
                , aeson-pretty
                , base64-bytestring
                , containers
                , hedgehog
                , hspec
                , hspec-wai
                , http-types
                , memory
                , metadata-lib
                , mtl
                , network-uri
                , tasty
                , tasty-hedgehog
                , bytestring
                , raw-strings-qq
                , tasty-hspec
                , http-client
                , tasty-hunit
                , tasty-quickcheck
                , text
                , servant
                , servant-client
                , smallcheck
                , warp
                , unordered-containers

  other-modules:        Test.Cardano.Metadata.Server.Types
                        Test.Cardano.Metadata.Server
                        Test.Cardano.Metadata.Store.Simple