cabal-version:       >=1.10
name:                metadata-lib
version:             0.1.0.0
license-file:        ../LICENSE
author:              Samuel Evans-Powell
maintainer:          mail@sevanspowell.net
build-type:          Simple
extra-source-files:  ../CHANGELOG.md

library
  hs-source-dirs:      src

  exposed-modules:     Cardano.Metadata.Server
                       Cardano.Metadata.Server.Types
                       Cardano.Metadata.Server.API
                       Cardano.Metadata.Store.Types
                       Cardano.Metadata.Store.Simple
                       Cardano.Metadata.Types.Common
                       Cardano.Metadata.Types.Wallet
                       Cardano.Metadata.Types.Weakly
                       Cardano.Metadata.Webhook.Types
                       Cardano.Metadata.Webhook.API
                       Cardano.Metadata.Webhook.Server
                       Test.Cardano.Metadata.Store
                       Test.Cardano.Metadata.Generators
                       Test.Cardano.Helpers

  build-depends:       HUnit
                     , QuickCheck
                     , aeson
                     , aeson-pretty
                     , base
                     , base64-bytestring
                     , bytestring
                     , cardano-api
                     , cardano-api-test
                     , cardano-crypto
                     , cardano-metadata-submitter
                     , cardano-crypto-class
                     , casing
                     , containers
                     , deepseq
                     , directory
                     , github-webhooks
                     , hashable
                     , hedgehog
                     , hspec
                     , http-api-data
                     , http-client
                     , http-types
                     , lens
                     , lens-aeson
                     , memory
                     , mmorph
                     , monad-logger
                     , mtl
                     , network-uri
                     , quiet
                     , raw-strings-qq
                     , safe-exceptions
                     , scientific
                     , servant
                     , servant-client
                     , servant-github-webhook
                     , servant-server
                     , smallcheck
                     , tasty
                     , tasty-hedgehog
                     , tasty-hspec
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , unordered-containers
                     , validation
                     , vector
                     , wai
                     , warp
                     , wreq

  ghc-options:          -Wall
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wincomplete-patterns
                        -Wredundant-constraints
                        -Wpartial-fields
                        -Wcompat

test-suite unit-tests
  hs-source-dirs:       test
  main-is:              Main.hs
  type:                 exitcode-stdio-1.0

  build-depends:  HUnit
                , QuickCheck
                , aeson
                , aeson-pretty
                , base >=4.12 && <5
                , base64-bytestring
                , bytestring
                , cardano-api
                , cardano-crypto-class
                , containers
                , hedgehog
                , hspec
                , hspec-wai
                , http-client
                , http-types
                , memory
                , metadata-lib
                , mtl
                , network-uri
                , raw-strings-qq
                , servant
                , servant-client
                , smallcheck
                , tasty
                , tasty-hedgehog
                , tasty-hspec
                , tasty-hunit
                , tasty-quickcheck
                , text
                , unordered-containers
                , validation
                , vector
                , wai-extra
                , warp

  other-modules:        Test.Cardano.Metadata.Server.Types
                        Test.Cardano.Metadata.Server
                        Test.Cardano.Metadata.Store.Simple
                        Test.Cardano.Metadata.Types
                        Test.Cardano.Metadata.Types.Wallet

  ghc-options:          -Wall
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wincomplete-patterns
                        -Wredundant-constraints
                        -Wpartial-fields
                        -Wcompat
