cabal-version:       >=1.10
name:                metadata-server
version:             0.1.0.0
license-file:        LICENSE
author:              Samuel Evans-Powell
maintainer:          mail@sevanspowell.net
build-type:          Simple
extra-source-files:  CHANGELOG

executable metadata-server
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , esqueleto
                     , github-webhooks
                     , lens
                     , lens-aeson
                     , metadata-lib
                     , metadata-store-postgres
                     , monad-logger
                     , mtl
                     , persistent-postgresql
                     , optparse-applicative
                     , persistent
                     , safe-exceptions
                     , scientific
                     , servant
                     , text
                     , warp

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unsafe
                        -threaded

  other-modules:        Paths_metadata_server
                        Config