cabal-version:       >=1.10
name:                metadata-store-file
version:             0.1.0.0
author:              Samuel Evans-Powell
maintainer:          mail@sevanspowell.net
build-type:          Simple
extra-source-files:  CHANGELOG

library
  hs-source-dirs:      src

  exposed-modules:     Cardano.Metadata.Store.File
                       Cardano.Metadata.Store.File.Config

  build-depends:       aeson
                     , base
                     , bytestring
                     , containers
                     , directory
                     , metadata-lib
                     , mtl
                     , filepath
                     , optparse-applicative
                     , safe-exceptions
                     , scientific
                     , text
                     , unordered-containers
                     , warp

  ghc-options:          -Wall
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wincomplete-patterns
                        -Wredundant-constraints
                        -Wpartial-fields
                        -Wcompat
                        -rtsopts

test-suite integration-tests 
  hs-source-dirs:       test
  main-is:              Main.hs
  type:                 exitcode-stdio-1.0

  build-depends:  base >=4.12 && <5
                , HUnit
                , QuickCheck
                , aeson
                , aeson-pretty
                , base
                , bytestring
                , casing
                , containers
                , directory
                , hedgehog
                , hspec
                , http-client
                , lens
                , lens-aeson
                , metadata-lib
                , metadata-store-file
                , monad-logger
                , mtl
                , raw-strings-qq
                , resource-pool
                , safe-exceptions
                , scientific
                , servant
                , servant-client
                , servant-server
                , smallcheck
                , tagged
                , tasty
                , tasty-hedgehog
                , tasty-hspec
                , tasty-hunit
                , tasty-quickcheck
                , text
                , unordered-containers
                , wai
                , warp

  ghc-options:          -Wall
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wincomplete-patterns
                        -Wredundant-constraints
                        -Wpartial-fields
                        -Wcompat