cabal-version:       >=1.10
name:                metadata-store-postgres
version:             0.1.0.0
license-file:        ../LICENSE
author:              Samuel Evans-Powell
maintainer:          mail@sevanspowell.net
build-type:          Simple
extra-source-files:  ../CHANGELOG.md

library
  hs-source-dirs:      src

  exposed-modules:     Cardano.Metadata.Store.Postgres

  build-depends:       aeson
                     , base
                     , bytestring
                     , casing
                     , containers
                     , directory
                     , esqueleto
                     , github-webhooks
                     , lens
                     , lens-aeson
                     , metadata-lib
                     , mtl
                     , monad-logger
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , resource-pool
                     , safe-exceptions
                     , scientific
                     , servant
                     , servant-server
                     , text
                     , unordered-containers
                     , wai

test-suite integration-tests 
  hs-source-dirs:       test
  main-is:              Main.hs
  type:                 exitcode-stdio-1.0

  build-depends:  base >=4.12 && <5
                , HUnit
                , QuickCheck
                , aeson
                , aeson-pretty
                , containers
                , hedgehog
                , hspec
                , metadata-lib
                , metadata-store-postgres
                , mtl
                , tasty
                , tasty-hedgehog
                , bytestring
                , raw-strings-qq
                , tasty-hspec
                , http-client
                , tasty-hunit
                , tasty-quickcheck
                , text
                , servant
                , servant-client
                , smallcheck
                , warp
                , unordered-containers

  other-modules:    Test.Cardano.Metadata.Store.Postgres
