cabal-version:       >=1.10
name:                metadata-store-postgres
version:             0.1.0.0
license-file:        ../LICENSE
author:              Samuel Evans-Powell
maintainer:          mail@sevanspowell.net
build-type:          Simple
extra-source-files:  ../CHANGELOG.md

library
  hs-source-dirs:      src

  exposed-modules:     Cardano.Metadata.Store.Postgres
                       Cardano.Metadata.Store.Postgres.Config

  build-depends:       aeson
                     , base
                     , bytestring
                     , casing
                     , containers
                     , directory
                     , esqueleto
                     , github-webhooks
                     , lens
                     , lens-aeson
                     , metadata-lib
                     , monad-logger
                     , mtl
                     , optparse-applicative
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , resource-pool
                     , safe-exceptions
                     , scientific
                     , servant
                     , servant-server
                     , text
                     , unordered-containers
                     , wai
                     , warp

test-suite integration-tests 
  hs-source-dirs:       test
  main-is:              Main.hs
  type:                 exitcode-stdio-1.0

  build-depends:  base >=4.12 && <5
                , HUnit
                , QuickCheck
                , aeson
                , aeson-pretty
                , base
                , bytestring
                , casing
                , containers
                , directory
                , esqueleto
                , github-webhooks
                , hedgehog
                , hspec
                , http-client
                , lens
                , lens-aeson
                , metadata-lib
                , metadata-store-postgres
                , monad-logger
                , persistent-postgresql
                , mtl
                , raw-strings-qq
                , resource-pool
                , safe-exceptions
                , scientific
                , servant
                , servant-client
                , servant-server
                , smallcheck
                , tagged
                , tasty
                , tasty-hedgehog
                , tasty-hspec
                , tasty-hunit
                , tasty-quickcheck
                , text
                , unordered-containers
                , wai
                , warp

  -- other-modules:    Test.Cardano.Metadata.Store.Postgres
