cabal-version:       >=1.10
name:                metadata-sync
version:             0.4.0.0
author:              Samuel Evans-Powell
maintainer:          mail@sevanspowell.net
build-type:          Simple
extra-source-files:  CHANGELOG

library
  hs-source-dirs:      src

  exposed-modules:     Cardano.Metadata.Sync
                       Cardano.Metadata.Sync.Config

  build-depends:       aeson
                     , base
                     , bytestring
                     , casing
                     , containers
                     , directory
                     , filepath
                     , postgresql-simple
                     , lens
                     , lens-aeson
                     , metadata-lib
                     , monad-logger
                     , mtl
                     , optparse-applicative
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , resource-pool
                     , safe-exceptions
                     , scientific
                     , servant
                     , servant-server
                     , temporary
                     , text
                     , time
                     , turtle
                     , unordered-containers
                     , wai
                     , warp

  ghc-options:          -Wall
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wincomplete-patterns
                        -Wredundant-constraints
                        -Wpartial-fields
                        -Wcompat

test-suite integration-tests
  hs-source-dirs:       test
  main-is:              Main.hs
  type:                 exitcode-stdio-1.0

  build-depends:  base >=4.12 && <5
                , HUnit
                , QuickCheck
                , aeson
                , aeson-pretty
                , base
                , bytestring
                , casing
                , containers
                , directory
                , hedgehog
                , hspec <2.9
                , http-client
                , lens
                , lens-aeson
                , metadata-lib
                , metadata-sync
                , monad-logger
                , postgresql-simple
                , mtl
                , raw-strings-qq
                , resource-pool
                , safe-exceptions
                , scientific
                , servant
                , servant-client
                , servant-server
                , smallcheck
                , tagged
                , tasty
                , tasty-hedgehog
                , tasty-hspec
                , tasty-hunit
                , tasty-quickcheck
                , text
                , unordered-containers
                , wai
                , warp

  ghc-options:          -Wall
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wincomplete-patterns
                        -Wredundant-constraints
                        -Wpartial-fields
                        -Wcompat

executable metadata-sync
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , lens
                     , metadata-lib
                     , metadata-sync
                     , monad-logger
                     , mtl
                     , optparse-applicative
                     , persistent
                     , postgresql-simple
                     , regex-compat
                     , resource-pool
                     , safe-exceptions
                     , scientific
                     , servant
                     , temporary
                     , text
                     , time
                     , turtle
                     , warp

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unsafe
                        -threaded
