cabal-version:       >=1.10
name:                metadata-validator-github
version:             0.1.0.0
license-file:        LICENSE
author:              Samuel Evans-Powell
maintainer:          mail@sevanspowell.net
build-type:          Simple
extra-source-files:  CHANGELOG

executable metadata-validator-github
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       aeson
                     , base
                     , base64-bytestring
                     , bytestring
                     , co-log
                     , containers
                     , directory
                     , filepath
                     , github
                     , http-client
                     , http-types
                     , lens
                     , lens-aeson
                     , megaparsec
                     , metadata-lib
                     , monad-logger
                     , mtl
                     , optparse-applicative
                     , safe-exceptions
                     , scientific
                     , servant
                     , servant-github-webhook
                     , servant-server
                     , text
                     , unordered-containers
                     , validation
                     , vector
                     , wai
                     , warp
                     , wreq

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unsafe
                        -threaded

  other-modules:        Paths_metadata_validator_github
                        Config