cabal-version:       >=1.10
name:                metadata-webhook
version:             0.2.0.0
author:              Samuel Evans-Powell
maintainer:          mail@sevanspowell.net
build-type:          Simple
extra-source-files:  CHANGELOG

executable metadata-webhook
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       aeson
                     , base
                     , bytestring
                     , containers
                     , directory
                     , esqueleto
                     , github-webhooks
                     , http-client
                     , http-types
                     , lens
                     , lens-aeson
                     , metadata-lib
                     , metadata-store-postgres
                     , monad-logger
                     , mtl
                     , optparse-applicative
                     , persistent
                     , persistent-postgresql
                     , safe-exceptions
                     , scientific
                     , servant
                     , servant-github-webhook
                     , servant-server
                     , text
                     , unordered-containers
                     , wai
                     , warp
                     , wreq

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unsafe
                        -threaded

  other-modules:        Paths_metadata_webhook
                        Config