cabal-version:       >=1.10
name:                metadata-webhook
version:             0.4.0.0
author:              Samuel Evans-Powell
maintainer:          mail@sevanspowell.net
build-type:          Simple
extra-source-files:  CHANGELOG

library
  hs-source-dirs:      lib
  exposed-modules:     Cardano.Metadata.Webhook.Secret

  build-depends:       base
                     , bytestring

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unsafe

executable metadata-webhook
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       aeson
                     , base
                     , bytestring
                     , containers
                     , directory
                     , github-webhooks
                     , http-client
                     , http-types
                     , lens
                     , metadata-lib
                     , metadata-store-postgres
                     , metadata-webhook
                     , monad-logger
                     , mtl
                     , optparse-applicative
                     , persistent
                     , persistent-postgresql
                     , regex-compat
                     , safe-exceptions
                     , scientific
                     , servant
                     , servant-github-webhook
                     , servant-server
                     , text
                     , unordered-containers
                     , wai
                     , warp
                     , wreq

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unsafe
                        -threaded

  other-modules:        Paths_metadata_webhook
                        Config

test-suite unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Main.hs

  build-depends:        base
                      , bytestring
                      , metadata-webhook
                      , tasty
                      , tasty-hunit

  ghc-options:          -Wall
